--- a/16_이터레이터와 제너레이터.ipynb
+++ b/16_이터레이터와 제너레이터.ipynb
@@ -126,9 +126,219 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9bff351a-4a24-452a-90f7-d0aca275c42b",
+   "metadata": {},
+   "source": [
+    "### 2. 제너레이터란?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ce63c1e3-b5e5-4762-80d2-7a973b15b47c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#return 대신 yield 키워드 사용 값을 반환하고 종료하는것이아닌 일시정지처리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a5904ec4-a411-4e9f-9feb-0e7e7f19017f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#가장 간단한 제너레이터\n",
+    "def mygen():\n",
+    "    yield 'a'\n",
+    "    yield 'b'\n",
+    "    yield 'c'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6bd3703d-360f-452e-98a0-4461b48e5171",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g=mygen()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8fdeb023-afc5-45a6-93e8-4619546978fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "generator"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3f4454de-589e-4e82-addf-b67794325954",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0ca96b84-b794-43fa-aca1-40be528f4385",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'b'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b4598c4d-851f-4ac1-95db-9ddd7184f009",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c4f0aa98-b09c-49b9-a7cc-32c56ba00e32",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mnext\u001b[39m(g)\n",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "next(g) #모든값을 꺼내고나면 StopIteration이 일어난다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b8cba64-b681-4b59-aa1b-76bce637fb63",
+   "metadata": {},
+   "source": [
+    "## 3. 제너레이터 표현식"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8980bc6a-06dd-46cc-af6f-e62b543973c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mygen():\n",
+    "    for i in range(1,1000):\n",
+    "        result = i * i\n",
+    "        yield result\n",
+    "gen = mygen()\n",
+    "\n",
+    "print(next(gen))\n",
+    "print(next(gen))\n",
+    "print(next(gen))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "48563c93-7e9f-4b76-bf3f-da1ad38ceff5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 제너레이터 표현식\n",
+    "gen = (i*i for i in range(1,1000))\n",
+    "\n",
+    "for i in range(1,6):\n",
+    "    print(next(gen))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b66e3ab4-294a-46f7-83d2-d9b1f0723c3d",
+   "id": "1ccbca23-6129-447d-9855-e38bc64e2350",
    "metadata": {},
    "outputs": [],
    "source": []
